--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>An Archaeological Pickle</title>
+    <title>An Ethical Digital World</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">  An Archaeological Pickle</h1>
-                        <p class="intro-text">Educational programming dedicated to issues in archaeology and how they might be solved.
+                        <h1 class="brand-heading">An Ethical Digital World</h1>
+                        <p class="intro-text">An Archaeological Pickle is educational programming dedicated to issues in archaeology and how they might be solved.
                             <br>Created and Hosted by Sage Schmied.</p>
                         <a href="about.html" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -91,7 +91,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About An Archaeological Pickle</h2>
-                <p> An Archaeological Pickle is a concept for a television program dedicated to archaeological issues and the pursuit of answers for these issues, see the <a href="about.html"> about page </a> for more </p>
+                <p> An Archaeological Pickle is a concept for a television program dedicated to archaeological issues and the pursuit of answers for these issues, see the <a href="about.html"> about page </a> for more concerning the issue of ethics in digital archaeology </p>
                 <p> You can watch a clip of what the show will be like on the <a href="watch.html">watch page</a>.</p>
                 <p> Feel free to contact me, the host and creator, all information can be found on the <a href="contact.html">contact page</a>.</p>
             </div>
