--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">An Archaeological Pickle</h1>
-                        <p class="intro-text">Educational programming dedicated to issues in archaeology and how they might be solved.
+                        <h1 class="brand-heading">An Ethical Digital World</h1>
+                        <p class="intro-text">An Archaeological Pickle is educational programming dedicated to issues in archaeology and how they might be solved.
                             <br>Created and Hosted by Sage Schmied.</p>
                         <a href="about.html" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -98,6 +98,7 @@ Listed below are some options for an ethics code:
 	<li> <br>Getting Consent.</br> This may be one of the most important things a digital archaeologist needs to consider. If they do not have consent for created a digital project, then it should not be done. If there is any issues with the public viewing the information then it should not be made public, and finally if any research is done without consent in the first place, written, informed consent it is not ethical and can not and should not be used.  </li>
 </ol>
 These are just a few points that need to be considered by digital archaeologists. Ultimately, digital archaeologists require an official document of ethics so that it can be followed and upheld. It is also important that there is some sort of board created with people who can uphold the official ethics document in the digital world. Unless this is done, digital work for archaeology will have a hard time making itself credible and seen as something that has great benefits to the discipline of archaeology and its research. As the internet is universal, so should be the code of ethics for digital archaeology, with possible special appendages for digital archaeology in certain places. As this certainly is the case in archaeology today, with different places having different rules for what applies to that place, however as mentioned, with the universality of the internet, digital archaeology may be able to have a more universal code. 
- Lastly, an ethics code would not only ensure the ethical work of digital archaeologists but would ensure that they were responsible as well. This sort of mindset can only lead to a sustainable future, in which digital archaeology has increasing validity and stewardship in the future. </p> 
+ Lastly, an ethics code would not only ensure the ethical work of digital archaeologists but would ensure that they were responsible as well. This sort of mindset can only lead to a sustainable future, in which digital archaeology has increasing validity and stewardship in the future. 
+</p> 
 </body> 
 </html> 
