--- a/home.html
+++ b/home.html
@@ -40,8 +40,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light"></span>
+                <a class="navbar-brand page-scroll" href="home.html">
+                    <i class="fa fa-play-circle"></i> <span class="light">Home</span>
                 </a>
             </div>
 
