--- a/about.html
+++ b/about.html
@@ -99,6 +99,29 @@ Listed below are some options for an ethics code:
 </ol>
 These are just a few points that need to be considered by digital archaeologists. Ultimately, digital archaeologists require an official document of ethics so that it can be followed and upheld. It is also important that there is some sort of board created with people who can uphold the official ethics document in the digital world. Unless this is done, digital work for archaeology will have a hard time making itself credible and seen as something that has great benefits to the discipline of archaeology and its research. As the internet is universal, so should be the code of ethics for digital archaeology, with possible special appendages for digital archaeology in certain places. As this certainly is the case in archaeology today, with different places having different rules for what applies to that place, however as mentioned, with the universality of the internet, digital archaeology may be able to have a more universal code. 
  Lastly, an ethics code would not only ensure the ethical work of digital archaeologists but would ensure that they were responsible as well. This sort of mindset can only lead to a sustainable future, in which digital archaeology has increasing validity and stewardship in the future. 
-</p> 
-</body> 
-</html> 
+</p>  
+  <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; An Archaeological Pickle 2016</p>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="js/grayscale.min.js"></script>
+
+</body>
+
+</html>
+
