--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>An Ethical Digital World</title>
+    <title>An Archaeologial Pickle</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">An Archaeological Pickle</h1>
-                        <p class="intro-text">Educational programming dedicated to issues in archaeology and how they might be solved.
+                        <h1 class="brand-heading">An Ethical Digital World</h1>
+                        <p class="intro-text">An Archaeological Pickle is educational programming dedicated to issues in archaeology and how they might be solved.
                             <br>Created and Hosted by Sage Schmied.</p>
                         <a href="about.html" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
