--- a/home.html
+++ b/home.html
@@ -70,11 +70,11 @@
 
     <!-- Intro Header -->
     <header class="intro">
+        <backgroung-img width="370" alt="pickle logo" src="https://cloud.githubusercontent.com/assets/22103152/21071141/23e6a116-be4c-11e6-976d-1a5c5aabcc0a.png">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2"> 
-                        <img width="370" alt="pickle logo" src="https://cloud.githubusercontent.com/assets/22103152/21071141/23e6a116-be4c-11e6-976d-1a5c5aabcc0a.png">
+                    <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">An Ethical Digital World</h1>
                         <p class="intro-text">An Archaeological Pickle is educational programming dedicated to issues in archaeology and how they might be solved.
                             <br>Created and Hosted by Sage Schmied.</p>
