--- a/home.html
+++ b/home.html
@@ -134,7 +134,8 @@
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <div id="map"> <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=12YU7alAOJ6Jl8MUY4crnfYiTH1cWwxgN48XMfBocZzU&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe> 
+        </div>
 
     <!-- Footer -->
     <footer>
