--- a/home.html
+++ b/home.html
@@ -70,7 +70,6 @@
 
     <!-- Intro Header -->
     <header class="intro">
-        <backgroung-img width="370" alt="pickle logo" src="https://cloud.githubusercontent.com/assets/22103152/21071141/23e6a116-be4c-11e6-976d-1a5c5aabcc0a.png">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
@@ -134,7 +133,7 @@
     </section>
 
     <!-- Map Section -->
-    <div id="map"> <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=12YU7alAOJ6Jl8MUY4crnfYiTH1cWwxgN48XMfBocZzU&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe> 
+    <div> <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=12YU7alAOJ6Jl8MUY4crnfYiTH1cWwxgN48XMfBocZzU&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe> 
         </div>
 
     <!-- Footer -->
