--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </header> 
-     <p> <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+     <p> <form id="contact_form" align="center" action="#" method="POST" enctype="multipart/form-data">
 	<div class="row">
 		<label for="name">Your name:</label><br />
 		<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
