--- a/about.html
+++ b/about.html
@@ -100,6 +100,11 @@ Listed below are some options for an ethics code:
 These are just a few points that need to be considered by digital archaeologists. Ultimately, digital archaeologists require an official document of ethics so that it can be followed and upheld. It is also important that there is some sort of board created with people who can uphold the official ethics document in the digital world. Unless this is done, digital work for archaeology will have a hard time making itself credible and seen as something that has great benefits to the discipline of archaeology and its research. As the internet is universal, so should be the code of ethics for digital archaeology, with possible special appendages for digital archaeology in certain places. As this certainly is the case in archaeology today, with different places having different rules for what applies to that place, however as mentioned, with the universality of the internet, digital archaeology may be able to have a more universal code. 
  Lastly, an ethics code would not only ensure the ethical work of digital archaeologists but would ensure that they were responsible as well. This sort of mindset can only lead to a sustainable future, in which digital archaeology has increasing validity and stewardship in the future. 
 <a href="https://magic.piktochart.com/output/18939662-an-archaeological-pickle"> Check this infographic out for more on An Archaeological Pickle </a>
+Sources: 
+Canadian Archaeological Association (2016) Principles of Ethical Conduct. Retrieved From: http://www.canadianarchaeology.com/caa/about/ethics/principles-ethical-conduct 
+Archaeological Institute of America (1997, Dec 29) Code of Ethics. Retrieved From: https://www.archaeological.org/news/advocacy/130 
+Society of American Archaeology (1996, April 10) Principles of Archaeological Ethics. Retrieved From: http://www.saa.org/AbouttheSociety/PrinciplesofArchaeologicalEthics/tabid/203/Default.aspx 
+National Park Service (1990, Nov 16) National NAGPRA. Retrieved From: https://www.nps.gov/nagpra/ 
 
 	</p>  
   <footer>
